Moves files to src

--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,9 @@
 {
-	"name": "qwersk/database"
+	"name": "qwersk/database",
+	"type": "library",
+	"autoload": {
+		"psr-4": {
+			"Qwersk\\": "src/"
+		}
+	}
 }
